# pyrsecurechannel

./: .gitignore  .pylintrc  MANIFEST.in  README.md  setup-pki.sh  setup.cfg  static.sh  test1.conf  test1.md  test1.ps1  test1.sh
.github/workflows/: codespell.yml  test.yml
debian/: changelog  control  copyright
pki-root/capath/: 40254843.r0  ca.crt
pki-root/pki/: dh.pem  index.txt  serial
pki-root/pki/certs_by_serial/: C2B7653EF2F7B90A889D65D57203DD00.pem
pki-root/pki/private/: ca.key  client1.key  server1.key
pki-root/pki/reqs/: client1.req  server1.req
pki-root/pki/revoked/reqs_by_serial/: 02D0861E33D562E9764EAE639B5BA0D0.req  14EF7D1194C9D72C5ECDE921EBD162B3.req
pki-root/store/: client1-revoked.crt  client1-revoked.key  server1-revoked.crt  server1-revoked.key  server1.crt
pyrloopclient/: __main__.py
pyrsecurechannel/: __main__.py
