[metadata]
name = pyrsecurechannel
version = 0.0.0
author = Alon Bar-Lev
author_email = alon.barlev@gmail.com
license = BSD3
url = https://github.com/alonbl/pyrsecurechannel
long_description = Python secure channel simple implementation

[options]
python_requires >= 3.8
packages = find:

[egg_info]
tag_build =
tag_date = 0
