[metadata]
name = pyrsecurechannel
version = 0.0.0
author = Alon Bar-Lev
author_email = alon.barlev@gmail.com
license = BSD3
url = https://github.com/alonbl/pyrsecurechannel
long_description = Python secure channel simple implementation

[options]
python_requires >= 3.8
packages = find:

[egg_info]
tag_build =
tag_date = 0

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_warn_unused_ignores = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[pycodestyle]
max-line-length = 120

[pylint.MASTER]
disable =
    C0114, # missing-module-docstring
    C0115, # missing-class-docstring
    C0116, # missing-function-docstring
    E0012, # bad-option-value	# TODO: remove ubuntu-22.04
    W0511, # fixme

[pylint.FORMAT]
max-line-length = 120
